--- a/demo3.html
+++ b/demo3.html
@@ -89,3 +89,42 @@
     </div>
 </body>
 </html>
+<!--
+    FLEX
+    display: flex;
+    flex-direction: (default = row)
+    - row:
+        + justidy-content: (default = flex-start) căn chiều ngang
+            + flex-end: Phải -> Trái
+        + align-items: (default = flex-start) căn chiều dọc
+            + flex-end: Dưới -> Trên
+
+    - row-reverse:
+        + justify-content: 
+            + flex-start: Phải -> Trái
+        + align-items: 
+            + flex-end: Dưới -> Trên
+
+    - column:
+        + align-items: Căn chiều ngang
+            + flex-start: Trái -> Phải
+        + justify-content: Căn chiều dọc
+            + flex-end: Dưới -> Trên
+
+    - column-reverse:
+        + align-itmes:
+            + flex-end: Phải -> Trái
+        + justify-content:
+            + flex-stert: Dưới -> Trên
+
+    align-content: Cách sắp xếp giữa các hàng với nhau
+    flex-wrap: (default = nowrap)
+        + nowrap: 
+        + wrap: Tự động xuống dòng nếu không đủ chỗ
+
+    order: (default = 0)
+     - số càng lớn thì nằm bên phải
+     - thằng nào viết trước thì nằm trước
+
+    align-self
+-->
