--- a/BTVN/Btvn3.html
+++ b/BTVN/Btvn3.html
@@ -2,69 +2,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Huong Ly BTVN 03</title>
     <link rel="stylesheet" href="/BTVN/output.css">
 </head>
 <body>
-    <div class="flex flex-col">
-        <div class="flex justify-center items-center gap-x-8 py-16">
-            <div class="flex-col items-center w-80 gap-2 ">
-                <div class="text-h2 font-extrabold">1,500,000+</div>
-                <div class="text-lead1">Customers who use Landify UI Kit to build their new startup landing page.</div>
-            </div>
-            <div class="flex-col gap-x-8">
-                <div class="flex">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
+    <div  class="flex justify-center">
+        <div class="flex flex-col items-center max-w-6xl">
+            <div class="flex justify-center items-center gap-x-8 py-16">
+                <div class="flex-col items-center mx-auto gap-2 ">
+                    <div class="text-h2 font-extrabold">1,500,000+</div>
+                    <div class="text-lead1">Customers who use Landify UI Kit to build their new startup landing page.</div>
                 </div>
-                <div class="flex">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
-                    <img src="/Images/ico_logo.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="flex flex-col items-center gap-12">
-            <div class="flex flex-col items-center gap-2 w-2/5">
-                <div class="text-h2 font-extrabold">Tailor-made features</div>
-                <div class="text-lead1 text-center">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</div>
-            </div>
-            <div class="flex flex-col ietms-center gap-16">
-                <div class="flex items-center gap-8">
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/01.png" alt="">
-                        <div class="text-2xl font-semibold">Robust workflow</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                <div class="flex-col w-full">
+                    <div class="flex gap-x-8">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
                     </div>
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/02.png" alt="">
-                        <div class="text-2xl font-semibold">Flexibility</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
-                    </div>
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/03.png" alt="">
-                        <div class="text-2xl font-semibold">User friendly</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                    <div class="flex gap-x-8">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
+                        <img class="max-w-40" src="/Images/ico_logo.png" alt="">
                     </div>
                 </div>
-                <div class="flex items-center gap-8">
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/04.png" alt="">
-                        <div class="text-2xl font-semibold">Multiple layouts</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+            </div>
+            <div class="flex flex-col items-center gap-12 py-16">
+                <div class="flex flex-col items-center gap-2">
+                    <div class="text-h2 font-extrabold">Tailor-made features</div>
+                    <div class="text-lead1 text-center max-w-xl">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</div>
+                </div>
+                <div class="flex flex-col items-center gap-16">
+                    <div class="flex items-center justify-center gap-8">
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/01.png" alt="">
+                            <div class="text-2xl font-semibold">Robust workflow</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/02.png" alt="">
+                            <div class="text-2xl font-semibold">Flexibility</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/03.png" alt="">
+                            <div class="text-2xl font-semibold">User friendly</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
                     </div>
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/05.png" alt="">
-                        <div class="text-2xl font-semibold">Better components</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
-                    </div>
-                    <div class="flex flex-col items-center gap-y-6">
-                        <img class="size-fit" src="/BTVN/Feature-icons/06.png" alt="">
-                        <div class="text-2xl font-semibold">Well organised</div>
-                        <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                    <div class="flex items-center gap-8">
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/04.png" alt="">
+                            <div class="text-2xl font-semibold">Multiple layouts</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/05.png" alt="">
+                            <div class="text-2xl font-semibold">Better components</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
+                        <div class="flex flex-col items-center gap-y-6">
+                            <img class="size-fit" src="/BTVN/Feature-icons/06.png" alt="">
+                            <div class="text-2xl font-semibold">Well organised</div>
+                            <div class="text-body text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</div>
+                        </div>
                     </div>
                 </div>
             </div>
