--- a/Demo6/Demo6.html
+++ b/Demo6/Demo6.html
@@ -16,7 +16,7 @@
                 <div class="md:row-span-1 sm:row-span-2 col-span-2">
                     <img src="./Images6/ico_cover_2.png" alt="" class="size-full object-cover">
                 </div>
-                <div class="md:row-span-1 md:col-cpan-1 sm:row-span-2 sm:col-span-2">
+                <div class="md:row-span-1 md:col-span-1 sm:row-span-2 sm:col-span-2">
                     <img src="./Images6/ico_cover_3.png" alt="" class="size-full object-cover">
                 </div>
                 <div class="row-span-2">
@@ -25,12 +25,12 @@
                 <div class="md:col-span-2 sm:row-span-2">
                     <img src="./Images6/ico_cover_5.png" alt="" class="size-full object-cover">
                 </div>
-                <div class="md:row-span-1 md:col-cpan-1 sm:row-span-2 sm:col-span-2">
+                <div class="md:row-span-1 md:col-span-1 sm:row-span-2 sm:col-span-2">
                     <img src="./Images6/ico_cover_6.png" alt="" class="size-full object-cover">
                 </div>
             </div>
         </div>
-        <div class="max-w-[1114px] w-full grid sm:grid-cols-2 md:grid-col-4 gap-4">
+        <div class="max-w-[1114px] w-full grid sm:grid-cols-2 md:grid-cols-4 gap-4">
             <div class="flex flex-col py-16">
                 <div class="text-h1 font-bold">40+</div>
                 <div class="text-lead1">Happy Clients</div>
