--- a/Demo6/Demo6.html
+++ b/Demo6/Demo6.html
@@ -13,7 +13,7 @@
                 <div class="row-span-2">
                     <img src="./Images6/ico_cover_1.png" alt="" class="size-full object-cover">
                 </div>
-                <div class="md:row-span-1 sm:row-span-2 col-span-2">
+                <div class="md:row-span-1 sm:row-span-2 sm:col-span-2">
                     <img src="./Images6/ico_cover_2.png" alt="" class="size-full object-cover">
                 </div>
                 <div class="md:row-span-1 md:col-span-1 sm:row-span-2 sm:col-span-2">
