--- a/BTVN/Btvn2.html
+++ b/BTVN/Btvn2.html
@@ -135,7 +135,7 @@
         <div class="header">
             <div class="left">
                 <div class="logo">
-                    <img src="Images/logo.png" alt="">
+                    <img src="/Images/logo.png" alt="">
                 </div>
                 <div class="menu">
                     <div>About</div>
@@ -145,14 +145,14 @@
                     <div>Jobs</div>
                     <div class="more">
                         <div>More</div>
-                        <img src="Hero/chevron-down.svg" alt="">
+                        <img src="/Hero/chevron-down.svg" alt="">
                     </div>
                 </div>
             </div>
             <div class="right">
                 <div class="download">
-                    <img src="Hero/Google Play Badge.svg" alt="">
-                    <img src="Hero/App Store Badge.svg" alt="">
+                    <img src="/Hero/Google Play Badge.svg" alt="">
+                    <img src="/Hero/App Store Badge.svg" alt="">
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
             </div>
             <div class="bottom">
                 <div>
-                    <img src="Hero/iPhone X.svg" alt="">
+                    <img src="/Hero/iPhone X.svg" alt="">
                 </div>
                 <div class="container1">
                     <div class="circle"></div>
