--- a/BtDemo5.html
+++ b/BtDemo5.html
@@ -9,8 +9,8 @@
     <div class="flex flex-col items-center py-14 bg-abc">
         <div class="text-h2 text-bold">Ours Clients</div>
         <div class="text-lead1 mt-2 mb-12"> We have been working with some Fortune 500 clients</div>
-        <div class="grid md:grid-cols-5 sm:grid-cols-3 gap-x-6 items-center">
-                <div class="md:visible">
+        <div class="grid md:grid-cols-5 grid-cols-3 gap-x-6 items-center">
+                <div class="md:flex hidden">
                     <img src="Images/ico_logo.png" alt="" >
                 </div>
                 <div>
@@ -28,8 +28,8 @@
                     <img src="Images/ico_logo.png" alt="" class="mb-6">
                     <img src="Images/ico_logo.png" alt="" class="md:hidden">
                 </div>
-                <div class="">
-                    <img src="Images/ico_logo.png" alt="" class="md:visible invisible">
+                <div class="md:flex hidden">
+                    <img src="Images/ico_logo.png" alt="">
                 </div>
         </div>
     </div>
