--- a/BTVN/Btvn4.html
+++ b/BTVN/Btvn4.html
@@ -9,10 +9,10 @@
     <div class="flex flex-col items-center">
         <div class="flex flex-col gap-10 p-16 bg-abc w-full items-center">
             <div class="flex flex-col items-center gap-2">
-                <div class="text-h2 font-extrabold">Our Clients Speak</div>
-                <div class="text-lead1">We have been working with clients around the world</div>
+                <div class="lg:text-h2 text-h3 font-extrabold">Our Clients Speak</div>
+                <div class="text-lead1 text-center">We have been working with clients around the world</div>
             </div>
-            <div class=" container grid grid-cols-3 gap-7">
+            <div class=" container grid lg:grid-cols-3 md:grid-cols-2 gap-7">
                 <div class="flex flex-col gap-4">
                         <div class="flex flex-col items-center">
                             <div class="flex flex-col items-center justify-center bg-white rounded-lg h-48 w-full">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="container flex flex-col p-16 gap-12">
-            <div class="flex gap-7">
+            <div class="lg:flex gap-7">
                 <div class="text-h3 font-extrabold w-full">Enter the world of all <br> fashion trends</div>
                 <div class="text-lead1 w-full">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis scelerisque at quam congue posuere libero in sit quam. Consequat, scelerisque non tincidunt sit lectus senectus.</div>
             </div>
